# lute

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: build-native.yml  docs.yml  publish.yml  test.yml  vscode-extension.yml
.omp/: lsp.json
conformance/: README.md
conformance/choice-basic/: artifact.json  expected.json  mock.yaml  schema.yaml  source.lute
conformance/facts-datalog-rule/: artifact.json  expected.json  mock.yaml  schema.yaml  source.lute
conformance/hub-once-exit/: artifact.json  expected.json  mock.yaml  schema.yaml  source.lute
conformance/match-otherwise/: artifact.json  expected.json  mock.yaml  schema.yaml  source.lute
conformance/quest-complete/: artifact.json  expected.json  mock.yaml  schema.yaml  source.lute
crates/lute-cel/: Cargo.toml
crates/lute-check/: Cargo.toml
crates/lute-check/src/: admission.rs  cel_expand.rs  cel_message.rs  cel_paths.rs  cel_resolve.rs  check.rs  component_import.rs  connectivity.rs  content_line.rs  ctx.rs  datalog_check.rs  decide.rs  defassign.rs  directives.rs  envelope.rs  fact_write.rs  fix.rs  inject.rs  lib.rs  match_check.rs  meta.rs  on.rs  prereq.rs  producible.rs  project_check.rs  reachability.rs  rel_schema.rs  schema_import.rs  set_op.rs  tag.rs  temporal.rs  timeline.rs
crates/lute-check/tests/: asset.rs  branch_all_guarded.rs  cel_message.rs  choice_persist.rs  collapse.rs  component_import.rs  component_match.rs  components_use.rs  connectivity.rs  content_line.rs  datalog.rs  decide.rs  diag_order.rs  directive_slots.rs  domains.rs  examples.rs  fact_query.rs  fact_write.rs  fold_env.rs  fragment_kind.rs  golden.rs  group_d.rs  hub.rs  hub_gate.rs  interp.rs  line_when.rs  on.rs  plugin_defs_disk.rs  quest.rs  quest_transitional.rs  reachability.rs  ref_type.rs  rel_compose.rs  rel_schema.rs  temporal.rs  timeline_timing.rs  uses_import.rs  when_is.rs
crates/lute-check/tests/golden/: auto_ok.lute  bg_ok.lute  branch_ok.lute  camera_ok.lute  cut_ok.lute  match_ok.lute  music_ok.lute  set_ok.lute  sfx_ok.lute  timeline_ok.lute  vfx_ok.lute  video_ok.lute
crates/lute-check/tests/snapshots/: golden__branch_ok_resolved.snap  golden__golden_sfx_ok.snap  golden__match_ok_resolved.snap  golden__timeline_ok_resolved.snap
crates/lute-cli/: Cargo.toml
crates/lute-cli/src/: doctor.rs  loc.rs  main.rs  runner.rs  scaffold.rs  scenario_fmt.rs  testcmd.rs
crates/lute-cli/tests/: asset_project.rs  check_project.rs  check_project_multi.rs  cli.rs  collapse.rs  compile.rs  component_sub_diagnostics.rs  deny.rs  examples_check.rs  examples_compile.rs  plugin_loaded.rs  project_gate.rs  scenario.rs  tag.rs  trace.rs  uses_import.rs
crates/lute-compile/: Cargo.toml
crates/lute-compile/src/: address.rs  cfg.rs  expand.rs  expr.rs  ir.rs  lib.rs  lower.rs  normalize.rs  schedule.rs  stage.rs
crates/lute-compile/tests/: address.rs  compile.rs  component_fold.rs  e2e.rs  expr_eval.rs  flatten.rs  inject.rs  ir_golden.rs  timeline.rs  when_sugar.rs
crates/lute-compile/tests/fixtures/expr_eval/: 01_cmp_ge.json  02_eq_string.json  03_neq_string_false.json  04_logic_and_or_not.json  05_arith_precedence.json  06_in_list_member.json  07_in_list_absent.json  08_ternary_select.json  09_has_present.json  10_has_absent.json  11_isset_present.json  12_isset_absent.json  13_bool_eq.json  14_when_is_alternation.json  15_when_is_unset.json  16_arith_sub.json  17_arith_div.json  18_cmp_lt.json  19_cmp_le.json  20_unary_neg.json
crates/lute-compile/tests/snapshots/: e2e__affinity_reaction.snap  e2e__bianca_s01ep02.snap  e2e__components_scene.snap  e2e__connected_quest.snap  e2e__gated_line.snap  e2e__quest_grove.snap  e2e__quest_rescue_halsin.snap  e2e__showcase_episode01.snap
crates/lute-core-span/: Cargo.toml
crates/lute-lsp/: Cargo.toml
crates/lute-lsp/src/: backend.rs  code_action.rs  convert.rs  lib.rs  main.rs
crates/lute-lsp/src/features/: completion.rs  folding.rs  hover.rs  mod.rs  nav.rs  semtok.rs  symbols.rs
crates/lute-lsp/tests/: code_action.rs  divergence.rs
crates/lute-manifest/: Cargo.toml
crates/lute-manifest/assets/lute.core/: enums.yaml  plugin.yaml
crates/lute-manifest/assets/lute.core/directives/: staging.yaml
crates/lute-manifest/src/: assemble.rs  asset.rs  core.rs  entities.rs  lib.rs  loader.rs  project.rs  provider.rs  relations.rs  resolve.rs  schema.rs  snapshot.rs  types.rs  validate.rs
crates/lute-manifest/tests/: assemble.rs  loader.rs  project.rs  tree_sitter_stamp.rs
crates/lute-syntax/: Cargo.toml
crates/lute-trace/: Cargo.toml
crates/lute-trace/src/: eval.rs  lib.rs  mock.rs  quest_refs.rs  report.rs  value.rs  walk.rs
crates/lute-trace/tests/: mock.rs  quarantine.rs  quest.rs  walk.rs
crates/lute-wasm/: Cargo.toml  smoke.mjs
crates/lute-wasm/src/: lib.rs
docs/: architecture.md  getting-started-first-scene.md  lute-overview.html  plugin-system.md  scenario-dsl-spec.md  versioning.md
docs/examples/: README.md  act1.schema.yaml  affinity-reaction.lute  base.schema.yaml  bianca-s01ep02.lute  carry-ep.lute  child.schema.lute  child.schema.yaml  choice-persist.lute  connected-intro.lute  connected-outro.lute  connected-quest.lute  (+15 more)
editors/: README.md
schemas/: lute-ir-0.6.schema.json  lute-ir-0.7.schema.json  lute.plugin.json  lute.schema.json
scripts/: check-docs-consistency.py  check-release-workflow-safety.py
tree-sitter-lute/: .gitignore  grammar.js  package.json  tree-sitter.json
(+157 files in other folders)
