[package]
name = "lute-check"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
lute-core-span = { path = "../lute-core-span" }
lute-manifest = { path = "../lute-manifest" }
lute-cel = { path = "../lute-cel" }
lute-syntax = { path = "../lute-syntax" }
cel-parser = "0.10.1"
serde = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
