[package]
name = "lute-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "lute"
path = "src/main.rs"

[dependencies]
lute-core-span = { path = "../lute-core-span" }
lute-manifest = { path = "../lute-manifest" }
lute-check = { path = "../lute-check" }
lute-syntax = { path = "../lute-syntax" }
lute-compile = { path = "../lute-compile" }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
