[package]
name = "lute-manifest"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
lute-core-span = { path = "../lute-core-span" }
serde = { workspace = true }
serde_yaml = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
serde_json = { workspace = true }
