[package]
name = "lute-trace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
lute-core-span = { path = "../lute-core-span" }
lute-syntax = { path = "../lute-syntax" }
lute-cel = { path = "../lute-cel" }
lute-manifest = { path = "../lute-manifest" }
lute-check = { path = "../lute-check" }
lute-compile = { path = "../lute-compile" }
cel-parser = "0.10.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
